Fix preloadScanner double download issue with link preload and media

The preloadScanner was not checking the media attribute when preloading
<link rel=preload> based resources, due to a bug that bypassed that logic for preloads.

This CL fixes that and adds unit tests to make sure it stays fixed.

BUG=612443

Review-Url: https://codereview.chromium.org/1982263002
Cr-Commit-Position: refs/heads/master@{#394932}

Former-commit-id: dd9e1daef514feb5f0b1e0788f57b68b4adeec84